finish all the game
2 power ups; nuc & multishot

--- a/Game.css
+++ b/Game.css
@@ -68,13 +68,17 @@ button[type="submit"]:hover {
 }
 
 #nuc_shot{
-    background-color: red;
     cursor: pointer;
     border-radius: 100%;
 }
 
+#nuc_shot img, #double_shot_btn img{
+
+    width: 70px;
+}
+
 #nuc_shot.active {
-    background-color: orange;
+    background-color: red;
     color: #fff;
 }
   
